marker raus nehmen

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</nav>
 		<section class="steckbrief clearfix" id="welcome-section">
 			<a name="uebermich" class="hidden">Über mich</a>
-			<p class="marker">&raquo;</p>
+			<!--<p class="marker">&raquo;</p>-->
 			<div class="me">
 				<h1 class="hero">Bewerbung als Web-Entwickler</h1>
 				<div class="box">
