added skills, redesign

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 	<head>
+		<meta lang="DE" />
+		<meta charset="UTF-8" />
 		<link rel="stylesheet" type="text/css" href="./css/cssreset.css" />
 		<link rel="stylesheet" type="text/css" href="./css/style.css" />
 		<link rel="stylesheet" type="text/css" href="./css/mobile-style.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src="https://kit.fontawesome.com/3ca2a54978.js" crossorigin="anonymous"></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display:ital,wght@1,400;1,700&family=Rochester&family=Source+Sans+Pro:wght@300;400;700&display=swap" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -54,6 +56,38 @@
 			</div>
 		</section>
 		<main>
+		<section class="content">
+			<article class="skills">
+				<h2><a name="skills">Skills</a></h2>
+				<div class="flex">
+					<div class="webdevelopment skill box">
+						<span class="bigicon"><i class="fa-solid fa-code"></i></span>
+						<h3>Web-Development</h3>
+						<ul class="square">
+							<li>Knowledge in PHP and MYSQL</li>
+							<li>Knowledge in basic Frontend-Development like HTML and CSS </li>
+						</ul>
+					</div>
+					
+					<div class="cms skill box">
+						<span class="bigicon"><i class="fa-solid fa-rocket"></i></span>
+						<h3>CMS</h3>
+						<ul class="square">
+							<li>Knowledge in Contao</li>
+							<li>Knowledge in Administrating and Developing in Contao </li>
+						</ul>
+					</div>
+					<div class="admin skill box">
+						<span class="bigicon"><i class="fa-solid fa-terminal"></i></span>
+						<h3>Administration</h3>
+						<ul class="square">
+							<li>Knowledge in Plesk Administration</li>
+							<li>Knowledge in Linux Bash </li>
+						</ul>
+					</div>
+				</div>
+			</article>
+		</section>
 		<section class="content">
 			<article class="beruflicherwerdegang">
 				<h2 class="first"> <a name="beruflicherwerdegang">Beruflicher Werdegang</a></h2>
